# swagger/swagger.yml
@@ -660,6 +660,11 @@ paths:
           value
         required: true
         type: string
+      - in: header
+        name: Authorization
+        description: Bearer YourAccessToken
+        required: true
+        type: string
       responses:
         "200":
           description: ""
@@ -674,13 +679,19 @@ paths:
       description: |-
         after login it will work
         <br>
-      operationId: LangLableController.After Login admin Can import language lable
+      operationId: LangLableController.After Login admin Can import English language
+        lable
       parameters:
       - in: formData
-        name: getIniFile
-        description: lable code
+        name: lables_ini_file
+        description: select language lables ini file for import
         required: true
         type: file
+      - in: header
+        name: Authorization
+        description: Bearer YourAccessToken
+        required: true
+        type: string
       responses:
         "200":
           description: ""
@@ -712,6 +723,11 @@ paths:
         description: here you pass original message value in english
         required: true
         type: string
+      - in: header
+        name: Authorization
+        description: Bearer YourAccessToken
+        required: true
+        type: string
       responses:
         "200":
           description: ""
@@ -741,6 +757,11 @@ paths:
       - in: formData
         name: ENGlang_value
         description: here you pass original message value in english
+        required: true
+        type: string
+      - in: header
+        name: Authorization
+        description: Bearer YourAccessToken
         required: true
         type: string
       responses:
@@ -778,6 +799,11 @@ paths:
         name: otherlang_value
         description: here you can pass ENGlanguage message  converted otherlanguage
           value
+        required: true
+        type: string
+      - in: header
+        name: Authorization
+        description: Bearer YourAccessToken
         required: true
         type: string
       responses:
